--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -2,4 +2,4 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "./magic-scissors.scss"
+@import "./doppelganger.scss"
