--- a/src/templates/homepage.hbs
+++ b/src/templates/homepage.hbs
@@ -1,15 +1,13 @@
 <div class="my-4 mx-auto p-4 shadow-md rounded-md max-w-lg bg-white">
-    <h1>✂️ Magic Scissors</h1>
+    <h1>🖼️ Celebrity Doppelganger</h1>
     <p>
-        Create synthetic datasets for computer vision by
-        copy/pasting objects of interest on top of
-        background images.
+        See who you look like! Upload a photo of yourself and we'll find your celebrity doppelganger.
     </p>
 
-    <form id="apiKeyForm">
+    <form id="photoForm">
     <div class="mt-4 mb-5">
-        <div class="block mb-2 font-bold text-sm">Enter <a href="https://app.roboflow.com/settings/api" target="_blank">your Roboflow Private API Key</a> to get started:</div>
-        <div><input type="password" id="apiKey" value="{{apiKey}}" name="apiKey" placeholder="e.g. M4G1csC15s0RZ" autofocus class="text-xl shadow-sm border border-gray-200 rounded-sm py-1 px-2 w-72" /></div>
+        <div class="block mb-2 font-bold text-sm">Choose a headshot:</div>
+        <div><input type="file" id="photo" name="photo" /></div>
         <div id="errorMessage" class="hidden mt-2 text-red-500 text-xs font-bold"></div>
     </div>
 
